k8s-manifests/ingress-ngix-depl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://menty.live"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS"  # Allowed HTTP methods
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type"  # Allowed headers
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/upgrade: "websocket"
    nginx.ingress.kubernetes.io/connection: "Upgrade"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  rules:
    - host: menty.live
      http:
        paths:
          # Frontend service handles the root path (/)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-srv
                port:
                  number: 3000
          # API Gateway handles requests under /api
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway-srv
                port:
                  number: 5000
  tls:
    - hosts:
        - menty.live
      secretName: menty-live-tls
